<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.volcano.holsansys.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
    </fragment>

    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.volcano.holsansys.ui.manage.ManageFragment"
        android:label="@string/title_manage"
        tools:layout="@layout/fragment_manage" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.volcano.holsansys.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>