<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 病人属性界面 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/dividers"
        android:showDividers="middle"
        android:gravity="center"
        android:dividerPadding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />

            <TextView
                android:id="@+id/me_name"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/user_age"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="8"
                android:textSize="@dimen/word_size"
                android:id="@+id/me_user_age"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/user_sex"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />
            <TextView android:layout_width="0dp" android:layout_height="35dp"
                android:layout_weight="8"
                android:textSize="@dimen/word_size"
                android:id="@+id/me_sex"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/user_address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />
            <TextView android:layout_width="0dp" android:layout_height="35dp"
                android:layout_weight="8"
                android:id="@+id/me_area"
                android:textSize="@dimen/word_size"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user_blood_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />
            <TextView android:layout_width="0dp" android:layout_height="35dp"
                android:layout_weight="8"
                android:id="@+id/me_blood"
                android:textSize="@dimen/word_size"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/user_medical_history"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />

            <TextView
                android:id="@+id/me_medi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/user_allergy"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />

            <TextView
                android:id="@+id/me_allergy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/word_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/edit_patient"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="编辑"
                android:textSize="@dimen/word_size"
                android:textColor="#FFFFFF"
                android:background="@drawable/bt_register_shape"/>

            <Button
                android:id="@+id/delete_patient"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="删除"
                android:textSize="@dimen/word_size"
                android:textColor="#FFFFFF"
                android:background="@drawable/bt_register_shape"/>

            <Button
                android:id="@+id/back_main"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="返回首页"
                android:textSize="@dimen/word_size"
                android:textColor="#FFFFFF"
                android:background="@drawable/bt_register_shape"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>